# threedgame

./: -.en.srt  .gitignore  CMakeLists.txt  I Optimised My Game Engine Up To 12000 FPS [40JzyaOYJeY].en.vtt  Makefile  analytic_fog_article_rewrite.md  audio.cpp  audio.h  character_death.md  fs.c  fs.h  gltfloader.c  gltfloader.h  gpu_timer.h  helpers.c  helpers.h  index.html  input.c  input.h  main.c  newarch.md  passes.c  passes.h  renderer.c  renderer.h  renderer_pipelines.h  slangtypes.h  sub.py  text_baker.c  text_system.c  text_system.h  todo.md  vk.c  vk.h  voxel.h  voxel.md  voxelmesh.txt  voxelpipeline.md
.github/: copilot-instructions.md
The-Forge/Common_3/Application/: CameraController.cpp  Config.h
The-Forge/Common_3/Graphics/Interfaces/: IGraphics.h  vulkan_graphics.h  vulkangraphics.h
blogpost/: easing_cubic_bezier.h  index.html
compiledshaders/: analytic_fog.comp.spv  bloom_downsample.comp.spv  bloom_upsample.comp.spv  debug_lines.frag.spv  debug_lines.vert.spv  dof_prepare.comp.spv  gltf_uber.frag.spv  gltf_uber.vert.spv  ground.frag.spv  ground.vert.spv  light_beam.frag.spv  light_beam.vert.spv  postprocess.comp.spv  slug_text.frag.spv  slug_text.vert.spv  sprite.frag.spv  sprite.vert.spv  toon_composite.frag.spv  toon_composite.vert.spv  toon_contour.frag.spv  toon_contour.vert.spv  triangle.frag.spv  triangle.vert.spv
docs/: BLOCK_DIM_FIX.md  COLOR_GRADING_PLAN.md  CPU_ACTIVE_TIME_INVESTIGATION_PLAN.md  README.md  RENDERER_API_REFERENCE.md  STAGING_BUFFER_REVIEW.md  TOON_SHADER_INTEGRATION_PLAN.md  VOXEL_RENDER_PATH_DEVICE_ADDRESS_MDI.md  dof-performance-analysis.md  running_game_ai.md
shaders/: analytic_fog.slang  bloom_downsample.slang  bloom_upsample.slang  common_bindless.slang  debug_lines.slang  dof_prepare.slang  gltf_uber.slang  ground.slang  light_beam.slang  postprocess.slang  sky.slang  slug_text.slang  sprite.slang  toon_contour.slang  triangle.slang
